[package]
name = "ocppx"
version = "0.1.0"
description = "OCPPX app"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"
rust-version = "1.57"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.4", features = ["api-all"] }
ocppx-types = { path = "../../crates/ocppx-types", version = "0.1.0" }

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[features]
default = ["custom-protocol"]
# This feature is used for production builds where `devPath` points to the filesystem.
# DO NOT remove this.
custom-protocol = [ "tauri/custom-protocol" ]
