[package]
name = "ocppx-types"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
chrono = "0.4"
url = { version = "2.2", features = ["serde"] }

[build-dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
case = "1.0"
regex = "1.5"
lazy_static = "1.0"